[package]
name = "load_balancer"
description = "LoadBalancer project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
tokio-stream = "0.1"
log = "0.4.20"
env_logger = "0.11.2"
clap = { version = "4.5.1", features = ["derive"]}